# pushkind-common

./: .gitignore  AGENTS.md  Cargo.toml  EXTRACTION_CANDIDATES.md  Makefile  README.md  package-lock.json  package.json
.github/workflows/: docs.yml  test_pr.yml
frontend/: tsconfig.json
frontend/src/: DropdownMultiSelect.test.tsx  DropdownMultiSelect.tsx  ModalFlashShell.tsx  ServiceNavbar.tsx  ShellFatalState.tsx  UserMenuDropdown.test.ts  UserMenuDropdown.tsx  index.ts  json.ts  markdown.test.tsx  markdown.tsx  mutations.ts  noAccess.tsx  shellApi.ts  types.ts  useServiceShell.ts
src/: db.rs  lib.rs  middleware.rs  pagination.rs  routes.rs  schema.rs  zmq.rs
src/domain/: auth.rs  benchmark.rs  email.rs  mod.rs  product.rs
src/domain/emailer/: email.rs  hub.rs  mod.rs
src/dto/: mod.rs  mutation.rs  shell.rs
src/models/: auth.rs  benchmark.rs  config.rs  crawler.rs  mod.rs  product.rs  zmq.rs
src/models/dantes/: benchmark.rs  crawler.rs  mod.rs  product.rs  product_image.rs
src/models/emailer/: email.rs  hub.rs  mod.rs  zmq.rs
src/models/sms/: zmq.rs
src/repository/: errors.rs  mod.rs
src/schema/: dantes.rs  emailer.rs  mod.rs
src/services/: errors.rs
tests/: db.rs  middleware.rs
tests/common/: mod.rs
