[package]
name = "pushkind-common"
version = "0.1.0"
edition = "2024"

[features]
default = []
actix = [
    "actix-web",
    "actix-identity",
    "chrono",
    "bcrypt",
    "jsonwebtoken",
    "actix-web-flash-messages",
    "futures-util",
    "log",
    "tera",
]
db = ["diesel", "log"]
dantes = ["db", "chrono"]
emailer = ["db", "chrono", "serde_json"]
zeromq = ["zmq", "log", "serde_json", "tokio"]
sms = []

[dependencies]
actix-web = { version = "4.11.0", optional = true }
actix-identity = { version = "0.9.0", optional = true }
chrono = { version = "0.4.42", features = ["serde"], optional = true }
bcrypt = { version = "0.17.1", optional = true }
jsonwebtoken = { version = "10.2.0", optional = true, features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
futures-util = { version = "0.3.31", optional = true }
actix-web-flash-messages = { version = "0.5.0", features = [
    "cookies",
], optional = true }
diesel = { version = "2.3.3", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
], optional = true }
log = { version = "0.4.28", optional = true }
zmq = { version = "0.10.0", optional = true }
thiserror = { version = "2.0.17" }
serde_json = { version = "1.0.145", optional = true }
tera = { version = "1.20.1", features = ["builtins"], optional = true }
tokio = { version = "1.48.0", features = ["sync"], optional = true }
url = "2.5.7"
